<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/travelshare_nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/travelshare_nav_home" />

    <item
        android:id="@+id/travelshare_nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/travelshare_nav_search" />

    <item
        android:id="@+id/travelshare_nav_messages"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/travelshare_nav_messages" />

    <item
        android:id="@+id/travelshare_nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/travelshare_nav_add" />

    <item
        android:id="@+id/travelshare_nav_itinerary"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/travelshare_nav_itinerary" />

</menu>

